--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "esnext",
+    "target": "es5",
     "declaration": true,
     "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true,
